--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -12,6 +12,7 @@
     font-family: Poppins;
     color: $primary-text;
     user-select: none;
+    overflow-x: hidden;
 }
 
 body {
